# mobile-wallet

./: Cargo.toml
.github/workflows/: ci.yaml  release.yaml
src/: helpers.rs  lib.rs
src/components/: token_list.rs
src/qrcode/: android.rs
src/routes/: recv.rs  scan.rs  send.rs  signup.rs  tokens.rs  txns.rs
