[workspace]
resolver = "2"

[package]
name = "dioxus-wallet"
version = "0.1.7"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.70"
async-std = "1.12.0"
dioxus = "0.3.2"
dioxus-router = "0.3.0"
fermi = "0.3.0"
futures = "0.3.27"
fraction = { version = "0.13.1", default-features = false, features = ["with-bigint", "with-decimal"] }
include_dir = "0.7.3"
lazy_static = "1.4.0"
qrcode = { git = "https://github.com/qm3ster/qrcode-rust" }
rosetta-client = "0.1.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
dioxus-desktop = "0.3.0"
surf = { version = "2.3.2", default-features = false, features = ["h1-client-rustls"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.1"
jni = "0.21.1"
log = "0.4.17"
ndk-context = "0.1.1"
paste = "1.0.12"

[target.'cfg(target_os = "ios")'.dependencies]
bardecoder = "0.4.1"
core-graphics = "0.22.3"
core-media-sys = "0.1.2"
objc = { version = "0.2.7", features = ["exception"] }
objc-foundation = "0.1.1"
objc_id = "0.1.1"
image = { version = "0.24", default-features = false }

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1.7"
dioxus-web = "0.3.1"
surf = { version = "2.3.2", default-features = false, features = ["wasm-client"] }
wasm-logger = "0.2.0"
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = ["Clipboard", "Navigator",] }
wasm-bindgen-futures = "0.4.34"

[build-dependencies]
cc = "1.0.79"

[patch.crates-io]
dirs-next = { git = "https://github.com/dvc94ch/dirs", branch = "android" }
